--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
 		"@ionic-native/core": "~4.20.0",
 		"@ionic-native/device": "^4.20.0",
 		"@ionic-native/fcm": "^4.20.0",
+		"@ionic-native/firebase": "^5.21.0",
 		"@ionic-native/keyboard": "^4.20.0",
 		"@ionic-native/network": "^4.20.0",
 		"@ionic-native/splash-screen": "~4.20.0",
@@ -38,7 +39,7 @@
 		"cordova-browser": "6.0.0",
 		"cordova-plugin-admob-free": "^0.27.0",
 		"cordova-plugin-device": "^2.0.3",
-		"cordova-plugin-fcm-with-dependecy-updated": "file:cordova-plugin-fcm-with-dependecy-updated",
+		"cordova-plugin-fcm-with-dependecy-updated": "^6.4.1",
 		"cordova-plugin-ionic-keyboard": "^2.2.0",
 		"cordova-plugin-ionic-webview": "^4.1.3",
 		"cordova-plugin-network-information": "^2.0.2",
@@ -48,6 +49,7 @@
 		"cordova-promise-polyfill": "0.0.2",
 		"cordova-sqlite-storage": "^3.4.1",
 		"dhtmlx-scheduler": "^5.3.4",
+		"fcm": "^1.0.3",
 		"ionic-angular": "3.9.5",
 		"ionicons": "^3.0.0",
 		"moment": "^2.26.0",
@@ -77,7 +79,13 @@
 			"cordova-plugin-ionic-keyboard": {},
 			"cordova-plugin-network-information": {},
 			"cordova-sqlite-storage": {},
-			"cordova-plugin-fcm-with-dependecy-updated": {},
+			"cordova-plugin-fcm-with-dependecy-updated": {
+				"FCM_VERSION": "19.0.0",
+				"GRADLE_TOOLS_VERSION": "3.5.3",
+				"GOOGLE_SERVICES_VERSION": "4.3.3",
+				"SUPPORT_LIBRARY_VERSION": "28.0.0",
+				"ANDROID_DEFAULT_NOTIFICATION_ICON": "@mipmap/ic_launcher"
+			},
 			"cordova-plugin-admob-free": {
 				"ADMOB_APP_ID": "ca-app-pub-7339534371956220~7273535038"
 			}
