--- a/plugins/cordova-plugin-ionic-webview/package.json
+++ b/plugins/cordova-plugin-ionic-webview/package.json
@@ -2,7 +2,7 @@
   "_args": [
     [
       "cordova-plugin-ionic-webview@4.2.1",
-      "D:\\Basit\\projects\\orgaFrontEnd"
+      "D:\\project\\IONIC\\orga basit\\orgaFrontEnd"
     ]
   ],
   "_from": "cordova-plugin-ionic-webview@4.2.1",
@@ -26,7 +26,7 @@
   ],
   "_resolved": "https://registry.npmjs.org/cordova-plugin-ionic-webview/-/cordova-plugin-ionic-webview-4.2.1.tgz",
   "_spec": "4.2.1",
-  "_where": "D:\\Basit\\projects\\orgaFrontEnd",
+  "_where": "D:\\project\\IONIC\\orga basit\\orgaFrontEnd",
   "author": {
     "name": "Ionic Team"
   },
