--- a/plugins/cordova-plugin-whitelist/package.json
+++ b/plugins/cordova-plugin-whitelist/package.json
@@ -2,7 +2,7 @@
   "_args": [
     [
       "cordova-plugin-whitelist@1.3.4",
-      "D:\\Basit\\projects\\orgaFrontEnd"
+      "D:\\project\\IONIC\\orga basit\\orgaFrontEnd"
     ]
   ],
   "_from": "cordova-plugin-whitelist@1.3.4",
@@ -26,7 +26,7 @@
   ],
   "_resolved": "https://registry.npmjs.org/cordova-plugin-whitelist/-/cordova-plugin-whitelist-1.3.4.tgz",
   "_spec": "1.3.4",
-  "_where": "D:\\Basit\\projects\\orgaFrontEnd",
+  "_where": "D:\\project\\IONIC\\orga basit\\orgaFrontEnd",
   "author": {
     "name": "Apache Software Foundation"
   },
