--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
 		"@ionic-native/status-bar": "~4.20.0",
 		"@ionic/storage": "2.2.0",
 		"@types/dhtmlxscheduler": "^4.3.37",
+		"angular-draggable-droppable": "^4.4.6",
 		"cordova-admob-sdk": "^0.24.1",
 		"cordova-android": "^8.1.0",
 		"cordova-browser": "6.0.0",
@@ -54,9 +55,10 @@
 		"ionicons": "^3.0.0",
 		"moment": "^2.26.0",
 		"ng-circle-progress": "^1.0.0",
+		"ng-drag-drop": "^5.0.0",
 		"prod": "1.0.1",
 		"promise-polyfill": "^8.1.0",
-		"rxjs": "5.5.11",
+		"rxjs": "5.5.12",
 		"rxjs-compat": "^6.5.4",
 		"sw-toolbox": "3.6.0",
 		"zone.js": "0.8.29"
